fix(code-preview): update overflow to auto IX-4305

--- a/packages/angular-test-app/src/preview-examples/global.css
+++ b/packages/angular-test-app/src/preview-examples/global.css
@@ -16,7 +16,7 @@
 html {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #root {
